// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`override option by CLI command > config 1`] = `
Object {
  "author": "myAuthor",
  "base": "/root/vvv",
  "bleed": undefined,
  "browser": Object {
    "executablePath": "/usr/bin/browser",
    "tag": "canary",
    "type": "chrome",
  },
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "css",
      "css.map",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": "https://vivlostyle.org",
  "customUserStyle": "theme.css",
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "myTitle",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "location": "https://myTheme.example.com",
          "name": "myTheme.example.com",
          "type": "uri",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "contentType": "text/markdown",
      "source": Object {
        "contentType": "text/markdown",
        "pathname": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
        "type": "file",
      },
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "https://myTheme.example.com",
          "name": "myTheme.example.com",
          "type": "uri",
        },
      ],
      "title": "myTitle",
    },
    Object {
      "contentType": "text/markdown",
      "source": Object {
        "contentType": "text/markdown",
        "pathname": "__WORKSPACE__/tests/fixtures/config/frontmatter.md",
        "type": "file",
      },
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/frontmatter.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "exportAliases": Array [],
  "ignoreHttpsErrors": true,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "myLanguage",
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/yuno.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "webpub",
      "path": "__WORKSPACE__/tests/fixtures/config/yuno",
    },
  ],
  "proxy": Object {
    "bypass": ".example.com",
    "password": "proxy-auth-password",
    "server": "http://localhost:3128",
    "username": "proxy-auth-user",
  },
  "quick": false,
  "readingProgression": "rtl",
  "rootUrl": "http://0.0.0.0:9876",
  "sandbox": false,
  "server": Object {
    "allowedHosts": Array [],
    "host": true,
    "port": 9876,
    "proxy": Object {
      "/api": "http://localhost:6789",
    },
  },
  "serverRootDir": "__WORKSPACE__/tests/fixtures/config",
  "singleDoc": false,
  "size": Object {
    "format": "JIS-B5",
  },
  "static": Object {
    "/": Array [
      "root1",
      "root2",
    ],
    "/static": Array [
      "path/to/static",
    ],
  },
  "temporaryFilePrefix": "__TEMPORARY_FILE_PREFIX__",
  "themeIndexes": Set {
    Object {
      "location": "https://myTheme.example.com",
      "name": "myTheme.example.com",
      "type": "uri",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 42000,
  "title": "myTitle",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": "https://vivliostyle.org/viewer/",
  "viewerInput": Object {
    "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "needToGenerateManifest": true,
    "type": "webpub",
  },
  "viewerParam": "allowScripts=false&pixelRatio=16",
  "viteConfig": undefined,
  "viteConfigFile": false,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`parse vivliostyle config > config 1`] = `
Object {
  "author": "author",
  "base": "/root/vvv",
  "bleed": undefined,
  "browser": Object {
    "executablePath": undefined,
    "tag": "beta",
    "type": "firefox",
  },
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "css",
      "css.map",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "title",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/node_modules/debug-theme",
          "name": "debug-theme",
          "registry": false,
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "contentType": "text/markdown",
      "source": Object {
        "contentType": "text/markdown",
        "pathname": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
        "type": "file",
      },
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/node_modules/debug-theme",
          "name": "debug-theme",
          "registry": false,
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "title": "title",
    },
    Object {
      "contentType": "text/markdown",
      "source": Object {
        "contentType": "text/markdown",
        "pathname": "__WORKSPACE__/tests/fixtures/config/frontmatter.md",
        "type": "file",
      },
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/frontmatter.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "exportAliases": Array [],
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "language",
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": "rtl",
  "rootUrl": "http://0.0.0.0:9876",
  "sandbox": false,
  "server": Object {
    "allowedHosts": Array [],
    "host": true,
    "port": 9876,
    "proxy": Object {
      "/api": "http://localhost:6789",
    },
  },
  "serverRootDir": "__WORKSPACE__/tests/fixtures/config",
  "singleDoc": false,
  "size": Object {
    "format": "size",
  },
  "static": Object {
    "/": Array [
      "root1",
      "root2",
    ],
    "/static": Array [
      "path/to/static",
    ],
  },
  "temporaryFilePrefix": "__TEMPORARY_FILE_PREFIX__",
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/node_modules/debug-theme",
      "name": "debug-theme",
      "registry": false,
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 1,
  "title": "title",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": undefined,
  "viewerInput": Object {
    "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "needToGenerateManifest": true,
    "type": "webpub",
  },
  "viewerParam": "foo=bar",
  "viteConfig": undefined,
  "viteConfigFile": true,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;
